--- a/02-CSS/homework/responsive-web/less/home-page.less
+++ b/02-CSS/homework/responsive-web/less/home-page.less
@@ -4,11 +4,27 @@
   .intro {
     h2 {
       padding: 15px;
+      @media (max-width: @phone) {
+      font-size: 25px;
+      }
     }
 
     p {
       padding: 0 15px;
+      @media (max-width: @phone) {
+        font-size: 10px;
+      }
     }
+
+    img {
+      // border-radius: 20px;
+      .imgRounded();
+
+      @media (max-width: @phone) {
+        width: 95%;
+      }
+    }
+
   }
 
   .music-images {
@@ -22,6 +38,18 @@
       border-radius: 20px;
       height: 100%;
     }
+
+    .tecnologia, .ondas {
+      @media (max-width: @phone) {
+        display: none;
+      }
+    }
+
+    .auricular {
+      @media (max-width: @phone) {
+        width: 100%;
+      }
+    }
   }
 
   .musica-nueva {
@@ -29,10 +57,16 @@
 
     h3 {
       margin-top: 11px;
+      @media (max-width: @phone) {
+        font-size: 25px;
+      }
     }
 
     p {
       margin-top: 13px;
+      @media (max-width: @phone) {
+        font-size: 10px;
+      }
     }
   }
 
@@ -43,24 +77,50 @@
     display: flex;
     justify-content: center;
 
+    @media (max-width: @phone) {
+      .flex(column-reverse);
+      padding: 15px;
+    }
+
     .actual-text {
       width: 50%;
 
+      @media (max-width: @phone) {
+        width: 100%;
+      }
+
       h3 {
         margin-bottom: 10px;
+        @media (max-width: @phone) {
+          font-size: 25px;
+        }
       }
 
       p {
         margin-bottom: 26px;
+        @media (max-width: @phone) {
+          font-size: 10px;
+        }
+        
       }
 
       .btn {
+        .btnPrimary(#22283A, white, white, black);
+
+        @media (max-width: @phone) {
+          width: 100%;
+        }
+
       }
     }
 
     .actual-img {
       width: 46%;
       margin-left: 4%;
+
+      @media (max-width: @phone) {
+        width: 100%;
+      }
 
       img {
         width: 100%;
