--- a/02-CSS/homework/responsive-web/less/mixins.less
+++ b/02-CSS/homework/responsive-web/less/mixins.less
@@ -1,1 +1,44 @@
 // Mixins acá
+
+.flex(@direction: row, @justify: center, @align: center){
+    display: flex;
+    flex-direction: @direction;
+    justify-content: @justify;
+    align-items: @align;
+}
+
+.imgRounded(@radius: 20px) {
+    border-radius: @radius;
+}
+
+.btn() {
+    display: inline-block;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: var 1px solid transparent;
+    border-radius: 0.25rem;
+    background-color: transparent;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btnPrimary(@bgColor, @fontColor, @hoverBg, @hoverBorder) {
+    .btn();
+    background-color: @bgColor;
+    color: @fontColor;
+
+    &:hover {
+        background-color: @hoverBg;
+        border: @hoverBorder solid 1px;
+        color: @hoverBorder;
+    }
+}
