--- a/02-CSS/homework/responsive-web/less/navigation.less
+++ b/02-CSS/homework/responsive-web/less/navigation.less
@@ -1,1 +1,29 @@
 // Código de Nav acá
+nav {
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    .flex(column, center, center);
+    background-color: @nav-bg;
+    border: @nav-border solid 2px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+
+    ul {
+        // display: flex;
+        // justify-content: space-around;
+        .flex(@justify: space-around);
+        width: 50%;
+        padding: 10px;
+
+        @media (max-width: @phone) {
+            width: 100%;
+        }
+    }
+
+    a {
+        text-decoration: none;
+        color: @nav-font;
+        font-weight: bold;
+    }
+}
